--- a/index.html
+++ b/index.html
@@ -1,9 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <img src="img/Group 4.png" alt="camp" class="logo" />
+        <div class="offer">
+          <h1 class="offer__title">Путешествия</h1>
+          <div class="offer__group">Вместе с командой верстальщиков</div>
+          <a href="#" class="offer__btn btn"> Узнать больше </a>
+        </div>
+        <a href="#" class="arrow__down"> ↓ </a>
+      </div>
+    </header>
+    <section class="section">
+      <div class="container">
+        <h2>Маршруты</h2>
+        <div class="geo-list d-flex justify-between">
+          <div class="geo-list__info">
+            <img src="img/Rectangle 2.png" alt="japan" />
+            <h3>Китай</h3>
+            <p class="geo-list__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore lores
+            </p>
+            <a href="#" class="geo-list__link">Подробнее →</a>
+          </div>
+          <div class="geo-list__info">
+            <img src="img/Rectangle 3png.png" alt="india" />
+            <h3>Индия</h3>
+            <p class="geo-list__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore lores
+            </p>
+            <a href="#" class="geo-list__link">Подробнее →</a>
+          </div>
+          <div class="geo-list__info">
+            <img src="img/Rectangle 4.png" alt="spain" />
+            <h3>Испания</h3>
+            <p class="geo-list__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore lores
+            </p>
+            <a href="#" class="geo-list__link">Подробнее →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <h2>O Code Travel</h2>
+        <div class="travel-info d-flex justify-between">
+          <div class="travel-info__history">
+            <h4>как все начиналось</h4>
+            <p class="travel-info__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <p class="travel-info__text">
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p class="travel-info__text">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi architecto beatae vitae
+              dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+              aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+              eos qui ratione voluptatem sequi nesciunt.
+            </p>
+          </div>
+          <div class="key">
+            <h4>Ключевые идеи</h4>
+            <ul class="key__list d-flex justify-between">
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Вкусная подножная еда</h5>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
