--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
         <div class="offer">
           <h1 class="offer__title">Путешествия</h1>
           <div class="offer__group">Вместе с командой верстальщиков</div>
-          <a href="#" class="offer__btn btn"> Узнать больше </a>
+          <a href="#routes" class="offer__btn btn"> Узнать больше </a>
         </div>
-        <a href="#" class="arrow__down"> ↓ </a>
+        <a href="#routes" class="arrow__down"> ↓ </a>
       </div>
     </header>
-    <section class="section">
+    <section class="section" id="routes">
       <div class="container">
         <h2>Маршруты</h2>
         <div class="geo-list d-flex justify-between">
-          <div class="geo-list__info">
-            <img src="img/Rectangle 2.png" alt="japan" />
+          <div class="geo-list__info hover-image-scale">
+            <img
+              src="img/Rectangle 2.png"
+              alt="japan"
+              class="hover-image-scale"
+            />
             <h3>Китай</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -31,8 +35,12 @@
             </p>
             <a href="#" class="geo-list__link">Подробнее →</a>
           </div>
-          <div class="geo-list__info">
-            <img src="img/Rectangle 3png.png" alt="india" />
+          <div class="geo-list__info hover-image-scale">
+            <img
+              src="img/Rectangle 3png.png"
+              alt="india"
+              class="hover-image-scale"
+            />
             <h3>Индия</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -40,8 +48,12 @@
             </p>
             <a href="#" class="geo-list__link">Подробнее →</a>
           </div>
-          <div class="geo-list__info">
-            <img src="img/Rectangle 4.png" alt="spain" />
+          <div class="geo-list__info hover-image-scale">
+            <img
+              src="img/Rectangle 4.png"
+              alt="spain"
+              class="hover-image-scale"
+            />
             <h3>Испания</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -91,7 +103,13 @@
                 <div class="key__img">
                   <img src="img/Rectangle 5.png" alt="food" />
                 </div>
-                <h5 class="key__title">Вкусная подножная еда</h5>
+                <h5 class="key__title">Интересные Маршруты</h5>
+              </li>
+              <li class="key__item">
+                <div class="key__img">
+                  <img src="img/Rectangle 5.png" alt="food" />
+                </div>
+                <h5 class="key__title">Немного практики в коде</h5>
               </li>
               <li class="key__item">
                 <div class="key__img">
@@ -103,24 +121,29 @@
                 <div class="key__img">
                   <img src="img/Rectangle 5.png" alt="food" />
                 </div>
-                <h5 class="key__title">Вкусная подножная еда</h5>
+                <h5 class="key__title">Интересные Маршруты</h5>
               </li>
               <li class="key__item">
                 <div class="key__img">
                   <img src="img/Rectangle 5.png" alt="food" />
                 </div>
-                <h5 class="key__title">Вкусная подножная еда</h5>
-              </li>
-              <li class="key__item">
-                <div class="key__img">
-                  <img src="img/Rectangle 5.png" alt="food" />
-                </div>
-                <h5 class="key__title">Вкусная подножная еда</h5>
+                <h5 class="key__title">Немного практики в коде</h5>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrap d-flex">
+          <span class="footer-wrap__item"> все права защищены </span>
+          <span class="footer-wrap__item"
+            >Лучшие путешествия для верстальщиков</span
+          >
+          <span class="footer-wrap__item">Совсем недорого</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
