--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>O Code Travel</h2>
         <div class="travel-info d-flex justify-between">
           <div class="travel-info__history">
-            <h4>как все начиналось</h4>
+            <h4 class="travel-info__title">как все начиналось</h4>
             <p class="travel-info__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
