--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         <h2>Маршруты</h2>
         <div class="geo-list d-flex justify-between">
           <div class="geo-list__info hover-image-scale">
-            <img
-              src="img/Rectangle 2.png"
-              alt="japan"
-              class="hover-image-scale"
-            />
+            <div class="geo-list__wrap">
+              <img
+                src="img/Rectangle 2.png"
+                alt="japan"
+                class="hover-image-scale"
+              />
+              <div class="geo-list__overlay">Подробнее</div>
+            </div>
             <h3>Китай</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -36,11 +39,14 @@
             <a href="#" class="geo-list__link">Подробнее →</a>
           </div>
           <div class="geo-list__info hover-image-scale">
-            <img
-              src="img/Rectangle 3png.png"
-              alt="india"
-              class="hover-image-scale"
-            />
+            <div class="geo-list__wrap">
+              <img
+                src="img/Rectangle 3png.png"
+                alt="india"
+                class="hover-image-scale"
+              />
+              <div class="geo-list__overlay">Подробнее</div>
+            </div>
             <h3>Индия</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -49,11 +55,14 @@
             <a href="#" class="geo-list__link">Подробнее →</a>
           </div>
           <div class="geo-list__info hover-image-scale">
-            <img
-              src="img/Rectangle 4.png"
-              alt="spain"
-              class="hover-image-scale"
-            />
+            <div class="geo-list__wrap">
+              <img
+                src="img/Rectangle 4.png"
+                alt="spain"
+                class="hover-image-scale"
+              />
+              <div class="geo-list__overlay">Подробнее</div>
+            </div>
             <h3>Испания</h3>
             <p class="geo-list__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -137,7 +146,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrap d-flex">
-          <span class="footer-wrap__item"> все права защищены </span>
+          <span class="footer-wrap__item"> Все права защищены </span>
           <span class="footer-wrap__item"
             >Лучшие путешествия для верстальщиков</span
           >
